@@ -1,3 +1,8 @@
+2018-02-16  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR rtl-optimization/70023
+	* gcc.target/i386/pr70023.c: New.
+
 2018-02-16  Carl Love  <cel@us.ibm.com>
 
 	* gcc.target/powerpc/p9-vinsert4b-1.c: Remove test file for non-ABI
